--- a/src/app/drug-route/drug-route.component.html
+++ b/src/app/drug-route/drug-route.component.html
@@ -5,6 +5,6 @@
   </div>
 </div>
 
-<button mat-fab color="accent" class="FAB" routerLink="/drug/order">
+<!-- <button mat-fab color="accent" class="FAB" routerLink="/drug/order">
   <mat-icon>add</mat-icon>
-</button>
+</button> -->
